make sure that anchor tags don't overflow

--- a/src/frontend/src/style.css
+++ b/src/frontend/src/style.css
@@ -254,6 +254,7 @@ pre {
 a {
     color: $clickable;
     text-decoration: none;
+    word-break: break-all;
 }
 
 a:visited {
